# refraction

./: .dockerignore  .env.example  .env.template  .envrc  .eslintrc.cjs  .gitignore  Cargo.toml  Dockerfile  README.md  badLinks.ts  build.rs  commands.ts  constants.ts  docker-compose.yaml  flake.nix  index.ts  logParser.ts  package-lock.json  package.json  pnpm-lock.yaml  renovate.json  treefmt.nix  tsconfig.json
.github/workflows/: autobot.yaml  check.yml  ci.yml  clippy.yml  docker.yml  lint.yml  nix.yml  update-flake.yml
nix/: clippy.nix  containerize.nix  deployment.nix  derivation.nix  dev.nix  module.nix  package.nix  packages.nix  static.nix
nix/deployment/: default.nix  module.nix  static.nix
nix/dev/: args.nix  docker.nix  flake.nix  pre-commit.nix  procfiles.nix  shell.nix  static.nix  treefmt.nix
src/: _commands.ts  _delete.ts  _reupload.ts  _upload.ts  badLinks.ts  config.ts  constants.ts  consts.rs  filters.ts  index.ts  logs.ts  main.rs  mclogs.ts  server.ts  storage.rs  storage.ts  tags.json  tags.rs  tags.ts  tagsTags.ts  tasks.ts  version.ts
src/api/: dadjoke.rs  github.rs  mclogs.rs  mod.rs  paste_gg.rs  pluralkit.rs  prism_meta.rs  rory.rs
src/commands/: help.ts  index.ts  joke.ts  members.ts  mod.rs  moderation.ts  modrinth.ts  ping.ts  rolemenu.ts  rory.ts  say.ts  stars.ts  tags.ts  teawie.ts  uwurandom.ts
src/commands/general/: delete_interaction.rs  help.rs  joke.rs  members.rs  mod.rs  modrinth.rs  ping.rs  rory.rs  say.rs  stars.rs  tag.rs
src/commands/moderation/: actions.rs  mod.rs  set_welcome.rs  support_ban.rs
src/config/: bot.rs  discord.rs  github.rs  mod.rs
src/handlers/: error.rs
src/handlers/event/: block_reaction.rs  delete.rs  delete_on_reaction.rs  dms_vcs.rs  eta.rs  expand_link.rs  give_role.rs  message_logger.rs  mod.rs  pluralkit.rs  regular_role.rs  support_onboard.rs
src/handlers/event/analyze_logs/: heuristics.rs  info.rs  issues.rs  mod.rs
src/handlers/event/analyze_logs/providers/: 0x0.rs  attachment.rs  haste.rs  mclogs.rs  mod.rs  paste_gg.rs  pastebin.rs
src/logproviders/: 0x0.ts  haste.ts  mclogs.ts  pastegg.ts
src/stats/: datetime.ts  index.ts  redis.ts
src/storage/: message_logger.rs  mod.rs
src/utils/: macros.rs  messages.rs  minecraftVersion.ts  mod.rs  pluralKit.ts  remoteVersions.ts  resolveMessage.ts  resolve_message.rs
tags/: FTB.md  always-offline.md  binary-search.md  build.md  cache.md  crosspost.md  curseforge.md  dm.md  fractureiser.md  gayming.md  hacks.md  java.md  javaforgebugfix.md  legacy_java_fixer.md  legacyjavafixer.md  log.md  login_fix.md  macos_arm_java.md  macosarmjava.md  migrate.md  minecraft_launcher_comparison.md  modping.md  nightly.md  not_support.md  optifine.md  paths.md  piracy.md  pluralkit.md  prism_logs.md  update.md  vcredist.md  why.md  why_java_8.md  whyjava8.md
