[package]
name = "refraction"
version = "2.0.0"
edition = "2021"
repository = "https://github.com/PrismLauncher/refraction"
license = "GPL-3.0-or-later"
readme = "README.md"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
gray_matter = "0.2.6"
poise = "0.5.7"
serde = "1.0.193"
serde_json = "1.0.108"

[dependencies]
async-trait = "0.1.74"
color-eyre = "0.6.2"
dotenvy = "0.15.7"
env_logger = "0.10.0"
log = "0.4.20"
poise = "0.5.7"
octocrab = "0.32.0"
once_cell = "1.18.0"
rand = "0.8.5"
redis = { version = "0.23.3", features = ["tokio-comp", "tokio-rustls-comp"] }
redis-macros = "0.2.1"
regex = "1.10.2"
reqwest = { version = "0.11.22", default-features = false, features = [
	"rustls-tls",
	"json",
] }
serde = "1.0.193"
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = [
	"macros",
	"rt-multi-thread",
	"signal",
] }
url = { version = "2.5.0", features = ["serde"] }
