[package]
name = "refraction"
version = "2.0.0"
edition = "2021"
repository = "https://github.com/PrismLauncher/refraction"
license = "GPL-3.0-or-later"
readme = "README.md"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
gray_matter = "0.2.6"
poise = "0.6.1"
serde = "1.0.196"
serde_json = "1.0.112"

[dependencies]
color-eyre = "0.6.2"
dotenvy = "0.15.7"
enum_dispatch = "0.3.12"
env_logger = "0.11.1"
eyre = "0.6.11"
log = "0.4.20"
poise = "0.6.1"
octocrab = "0.33.3"
once_cell = "1.19.0"
owo-colors = "4.0.0"
rand = "0.8.5"
redis = { version = "0.24.0", features = ["tokio-comp", "tokio-rustls-comp"] }
redis-macros = "0.2.1"
regex = "1.10.3"
reqwest = { version = "0.11.23", default-features = false, features = [
	"rustls-tls",
	"json",
] }
serde = "1.0.196"
serde_json = "1.0.112"
tokio = { version = "1.35.1", features = [
	"macros",
	"rt-multi-thread",
	"signal",
] }
url = { version = "2.5.0", features = ["serde"] }

[profile.release]
codegen-units = 1
opt-level = "s"
panic = "abort"
strip = "symbols"
