[package]
name = "refraction"
version = "2.0.0"
edition = "2021"
repository = "https://github.com/PrismLauncher/refraction"
license = "GPL-3.0-or-later"
readme = "README.md"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
gray_matter = "0.2.6"
poise = "0.6.1"
serde = "1.0.199"
serde_json = "1.0.116"

[dependencies]
color-eyre = "0.6.3"
dotenvy = "0.15.7"
enum_dispatch = "0.3.13"
env_logger = "0.11.1"
eyre = "0.6.11"
log = "0.4.21"
poise = "0.6.1"
octocrab = "0.38.0"
redis = { version = "0.25.3", features = ["tokio-comp", "tokio-rustls-comp"] }
regex = "1.10.4"
reqwest = { version = "0.12.4", default-features = false, features = [
	"rustls-tls",
	"json",
] }
serde = "1.0.199"
serde_json = "1.0.116"
tokio = { version = "1.35.1", features = [
	"macros",
	"rt-multi-thread",
	"signal",
] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
complexity = "warn"
correctness = "deny"
pedantic = "warn"
perf = "warn"
style = "warn"
suspicious = "deny"
